--- a/css/style.css
+++ b/css/style.css
@@ -1,130 +1,7 @@
-/*
- * General Styles
-*/
-
-
 body {
-  background: #DDD;
-  font-family: 'Roboto', sans-serif;
-  background: url('../images/fireworks.jpg');
-  /* Full Page Background Receipe */
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+	background-color: #6D1C54;
 }
 
-* {
-  -moz-box-sizing: border-box; /* Firexfox */
-  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-  box-sizing: border-box; /* IE */
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-p {
-  font-size: 16px;
-  line-height: 1.75;
-  margin-bottom: 28px;
-}
-
-strong {
-  font-weight: bold;
-}
-
-ul li {
-  list-style: decimal inside;
-}
-
-/*
- * Heading Styles
-*/
-
-a {
-  text-decoration: none;
-  color: #970017;
-}
-
-h1, h2 {
-  font-family: 'Great Vibes', cursive;
-  text-align: center;
-  color: #970017;
-  margin-bottom: 2rem;
-  font-weight: bold;
-}
-
-h1 {
-  color: #970017;
-  font-size: 2.5rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-/*
- * Container Styles
-*/
-
-
-.container {
-  width: 600px;
-  margin: 100px auto;
-}
-
-.container section:nth-child(even) {
-  background: Silver;
-}
-
-.container section:nth-child(odd) {
-  background: #FFF;
-}
-/*
- * Hero Styles
-*/
-
-.hero {
-    line-height: 0px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.hero img {
-  width: 100%;
-  border-radius: 20px 20px 0px 0;
-
-}
-/*
- * Section Styles
-*/
-
-section.map {
-  width: 600px;
-}
-
-section.intro, section.contact, section.footer{
-  padding: 40px;
-}
-
-section.footer {
-  border-radius: 0px 0px 20px 20px;
-}
-
-/*
- * Aside Styles
-*/
-
-aside.left {
-  float: left;
-}
-
-aside.right {
-  float: right;
-}
-
-aside {
-  margin-right: 1.5rem;
-  margin-bottom: 0.625rem;
+h1, p {
+	color: #E1F5C4;
 }
