--- a/pete/css/style.css
+++ b/pete/css/style.css
@@ -1,30 +1,52 @@
+@import url('https://fonts.googleapis.com/css?family=Cantarell|Lora');
+
 body {
-
-background-color: #3a3652;
-color: #a3a7bf;
-font-family: Arial;
-
+	background-color: #575373;
+	color: #a3a7bf;
+	font-family: 'Lora', serif;
+	font-size: 16px;
+	margin: 3em;
 }
 
 a {
-
-color: #fff;
-text-decoration: none;
-
+	color: #fff;
+	text-decoration: none;
 }
 
 h1 {
-
-color: #fff;
+	color: #fff;
+	font-size: 2.5em;
+	font-family: 'Cantarell', sans-serif;
+	text-align: center;
 
 }
 
 h2 {
-
-color: #fff;
+	color: #fff;
+	font-size: 2em;
+	font-family: 'Cantarell', sans-serif;
+	margin: 1em;
 }
 
+p {
+	margin: 2em;
+}
+
+img {
+	margin: 2em;
+}
 
 #slogan {
 	font-style: italic;
+	color: #fff;
+	text-align: center;
+}
+
+.panel-2 {
+	text-align: right;
+	background: gray;
+}
+
+.panel-4 {
+	text-align: right;
 }
